services/concert-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concert-service
  labels:
    app: concert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concert-service
  template:
    metadata:
      labels:
        app: concert-service
    spec:
      containers:
        - name: concert-service
          image: concert:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
