services/concert-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concert-service
  labels:
    app: concert-service
    monitoring: enabled
spec:
  type: ClusterIP
  selector:
    app: concert-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
